# ptkl

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .gitmodules  ATTRIBUTION.md  CMakeLists.txt  LICENSE  Makefile  README.md  leaks-check.sh  watchmake  watchtest
examples/: fib_module.js  guess.js  hello_module.js  simple-game.js
include/: buffer.h  list.h  map.h  ptkl.h  string.h  vector.h
src/: CMakeLists.txt
src/adt/: list.c  map.c  stack.c  string.c  vector.c
src/libcli/: CMakeLists.txt  args-orig.c  args.c
src/libcli/include/: args.h  cli.h  command.h
src/libcli/src/: cli.c  command.c
src/libconsole/: CMakeLists.txt
src/libconsole/examples/: CMakeLists.txt  colors.c  simple_input.c  snake_game.c  text_editor.c
src/libconsole/include/: console.h  editline.h  terminal.h
src/libconsole/src/: console.c  editline.c  terminal.c
src/libptkl/: CMakeLists.txt  libmain.c
src/libptkl/adt/: list.c  map.c  stack.c  vector.c
src/libptkl/include/: adt.h  errors.h  list.h  ptkl.h  results.h  stack.h
src/libptkl/src/: libmain.c
src/libptkl/utils/: errors.c  results.c
src/libqjs/: CMakeLists.txt  ptkl.c  ptklargs.c  ptklargs.h  ptklc.c  ptklc_main.c  valgrind-check.sh
src/libqjs/include/: qjs.h  qjsc.h
src/libqjs/src/: compiler.c  engine.c
src/libstd/: CMakeLists.txt  errors.c
src/libstd/include/: adt.h  errors.h  list.h  log.h  map.h  results.h  stack.h  strings.h  test.h  vector.h
src/libstd/src/: errors.c  log.c
src/libstd/src/types/: buffer.c  map.c  strings.c  vector.c
src/libstd/types/: dstring.c  list.c  map.c  results.c  vector.c
src/libstring/: CMakeLists.txt  dstring.c
src/libstring/include/: dstring.h
src/libutils/: CMakeLists.txt
src/ptkl/: CMakeLists.txt  args.c  args.h  ptkl-qjs.c  ptkl.c  qjsargs.c
src/ptkl/include/: commands.h
src/ptkl/src/: commands.h  main.c  ptkl.c
src/ptkl/src/commands/: compile.c  console.c  data.c  help.c  logs.c  main.c  repl.c  run.c  serve.c  service.c  storage.c  version.c
src/ptkltest/: ptkltest.c  test.h
src/test/: CMakeLists.txt  adt_test.c  cli_test.c  expect_test.c  ptkltest.c  string_test.c  test.h  test_main.c  utils_test.c
src/test/libptkl/: test.h
src/test/ptkl/: ptkltest.c
src/test/src/: testmain.c
src/test/src/tests/: cli_test.c  errors_test.c  expect_test.c  log_test.c  string_test.c
src/x/: CONTRIBUTING.md  args-orig.c  args.h  ptkl  ptkl-with-cli-tests.c  ptkl.c  ptklc  ptklc_main.c  ptklcli.c  ptklcli.h
src/x/dstring/: dstring.c  dstring.h
src/x/libcli/: args-orig.c  args.c  cli_test.c
src/x/ptkl-qjs/: ptkl-qjs.c  qjsargs.c  qjsargs.h
src/x/qjs/: ptkl.c  ptklargs.c  ptklargs.h  ptklc.c
src/x/results/: results.c  results.h  results_test.c
